<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gabe_First_Test</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a list of words to be alphabetized, separated by spaces.</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">Alphabetical List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="testmsg">Do I change?</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="no_location_detected">        No location detected. Make sure location is enabled on the device.</string>
    <string name="title_activity_pong">PongActivity</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    <string name="title_activity_geo">GeoActivity</string>
    <string name="title_activity_bird">BirdActivity</string>
    <string name="birdString">Bird Stuff!</string>
    <string name="gameovermessage">Game over!</string>
    <string name="title_activity_tcp">TCPActivity</string>
    <string name="title_activity_pos">posActivity</string>

</resources>
