<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/edit_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:onClick="sendMessage"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test Button"
                android:onClick="newAct"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testmsg"
                android:id="@+id/gpsstring"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/latitude_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/latitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/latitude_label"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/latitude_label"
                android:textIsSelectable="true"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/longitude_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/longitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/longitude_label"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/longitude_label"
                android:textIsSelectable="true"
                android:textSize="25sp"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/touch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/longitude_label"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/longitude_label"
                android:textIsSelectable="true"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Finger Painting!"
            android:onClick="drawingAct"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Pong! (Experimental.)"
            android:onClick="pongAct"
            android:textColor="@color/red"
            android:background="@color/blue"
            android:id="@+id/pong_button"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find geocache!"
                android:onClick="geoAct"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                </RadioGroup>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="playSound"
                android:text="DEMON LIGHT"
                android:background="@color/black"
                android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/locationtext"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/typeything"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/PoCbird"
                    android:text="@string/birdString"
                    android:onClick="birdThing"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete Highscores for BirdGame."
                    android:onClick="deleteHS" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchTCP"
                android:text="TCP Test"/>
            <com.example.gabe.gabe_first_test.CustomButton
                android:layout_height="200dp"
                app:costEach="4.50"
                app:numberPurchased="4"
                app:itemName="CHEESE"
                app:buttonColor="@color/green"
                android:layout_width="200dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POS"
                android:onClick="launchPOS"
                android:background="@color/red"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.example.gabe.gabe_first_test.CustomButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:costEach="1.20"
                app:numberPurchased="3"
                app:itemName="HOTDOG"
                app:buttonColor="@color/green"/>
            </LinearLayout>
    </LinearLayout>
</ScrollView>